Fix: error on delete file